# language-model-common

./: .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  pre-commit-hook  pre-commit.Dockerfile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_test.yml  python-publish.yml
docs/: mcp-apps.md  mcp-tool-discovery.md  migration-model-factory-and-reasoning.md
languagemodelcommon/auth/: oauth_provider_registrar.py  pass_through_token_manager.py  token_storage_auth_manager.py
languagemodelcommon/aws/: aws_client_factory.py
languagemodelcommon/container/: container_factory.py
languagemodelcommon/converters/: debug_file_writer.py  langgraph_to_openai_converter.py  streaming_manager.py  streaming_tool_node.py
languagemodelcommon/exceptions/: bailey_exception.py
languagemodelcommon/file_managers/: aws_s3_file_manager.py  file_manager.py  file_manager_factory.py  file_writer.py  local_file_manager.py
languagemodelcommon/graph/: graph_builder.py
languagemodelcommon/history/: conversation_history_manager.py  smart_history_manager.py
languagemodelcommon/image_generation/: aws_image_generator.py  image_generator_factory.py  openai_image_generator.py
languagemodelcommon/langgraph/: __init__.py  graph_builder.py
languagemodelcommon/mcp/: call_tool_tool.py  callbacks.py  mcp_client.py  mcp_tool_provider.py  plugin_mcp_provider.py  resource_catalog.py  search_tools_tool.py  tool_catalog.py  tool_discovery_middleware.py
languagemodelcommon/mocks/: mock_aws_client_factory.py  mock_http_client_factory.py  mock_image_generator.py  mock_image_generator_factory.py
languagemodelcommon/models/: bedrock_models.py  model_factory.py
languagemodelcommon/ocr/: aws_ocr_extractor.py  ocr_extractor_factory.py
languagemodelcommon/persistence/: persistence_factory.py
languagemodelcommon/state/: messages_state.py
languagemodelcommon/tools/: resilient_base_tool.py
languagemodelcommon/utilities/: chat_message_helpers.py  config_substitution.py  request_information.py  s3_url.py  text_humanizer.py  tool_display_name_mapper.py  tool_friendly_name_mapper.py  url_parser.py
tests/auth/: test_ensure_oauth_provider_discovery.py
tests/configs/: test_config_reader.py  test_file_config_reader.py  test_github_config_reader.py  test_github_config_repo_manager.py  test_github_config_zip_reader.py  test_github_directory_downloader_integration.py  test_mcp_json_auth_providers.py  test_mcp_json_fetcher.py  test_mcp_json_resolution.py  test_mcp_json_resolution_oauth.py  test_mcp_oauth_config.py  test_s3_config_reader.py
tests/converters/: test_debug_file_writer.py  test_langgraph_to_openai_converter.py  test_streaming_manager.py
tests/file_managers/: test_aws_file_manager.py  test_local_file_manager.py
tests/mcp/: test_auth_server_metadata_discovery.py  test_call_tool_tool.py  test_callbacks.py  test_interceptor_types.py  test_langchain_adapter.py  test_mcp_client.py  test_mcp_client_performance.py  (+4 more)
(+103 files in other folders)
